--- a/client/templates/tabs.html
+++ b/client/templates/tabs.html
@@ -1,6 +1,6 @@
 <ion-tabs class="tabs-stable tabs-icon-top tabs-color-positive" ng-cloak>
 
-  <ion-tab title="Metronome" icon-on="ion-ios-clock" icon-off="ion-ios-chatbubble-outline" href="#/tab/Metronome">
+  <ion-tab title="Metronome" icon-on="ion-ios-clock" icon-off="ion-ios-chatbubble-outline" href="#/Metronome">
     <ion-nav-view name="tab-metronome"></ion-nav-view>
   </ion-tab>
 
