--- a/client/templates/tabs.html
+++ b/client/templates/tabs.html
@@ -4,6 +4,10 @@
     <ion-nav-view name="tab-metronome"></ion-nav-view>
   </ion-tab>
 
+  <ion-tab title="Metronome" icon-on="ion-ios-clock" icon-off="ion-ios-chatbubble-outline" href="#/Metronome/{{met.sessionId}}">
+    <ion-nav-view name="tab-metronome-session"></ion-nav-view>
+  </ion-tab>
+
   <ion-tab title="Settings" icon-on="ion-ios-cog" icon-off="ion-ios-cog-outline" href="#/tab/settings">
     <ion-nav-view name="tab-settings"></ion-nav-view>
   </ion-tab>
