--- a/client/templates/metronome.html
+++ b/client/templates/metronome.html
@@ -5,7 +5,7 @@
     <button ng-click="met.stopClick()" class="button button-clear button-assertive">Stop</button>
     <div class="inputContainer">
       <label for="tempo">BPM:</label>
-      <input type="text" name="tempo" ng-model="met.metSettings.startingTempo">
+      <input type="text" id="tempo" name="tempo" ng-model="met.metSettings.startingTempo">
     </div>
 
     <select name="subSelect" id="subSelect" placeholder="Subdivisions"
@@ -16,8 +16,21 @@
       ng-options="option.name for option in met.metSettings.timeSignitures track by option.value"
       ng-model="met.metSettings.timeSigniture"></select>
 
-      <select name="accSelect" id="accSelect" placeholder="Accent"
-        ng-options="option.name for option in met.metSettings.accentPlacements track by option.value"
-        ng-model="met.metSettings.accent"></select>
+    <select name="accSelect" id="accSelect" placeholder="Accent"
+      ng-options="option.name for option in met.metSettings.accentPlacements track by option.value"
+      ng-model="met.metSettings.accent"></select>
+
+    <button ng-click="met.showCreateRoom()" class="button button-clear button-assertive">Create/Join a Room</button>
+    <div id="createRoomContainer">
+      <label for="tempo">User Id:</label>
+      <input type="text" id="userId" name="userId" ng-model="met.metSettings.userId">
+      <label for="tempo">Room Name:</label>
+      <input type="text" id="roomName" name="roomName" ng-model="met.metSettings.room">
+      <button ng-click="met.createRoom()" class="button button-clear button-assertive">Join Room</button>
+      <input type="text" id="messageInput" name="messageInput" ng-model="met.metSettings.messageInput">
+      <button ng-click="met.sendMessage()" class="button button-clear button-assertive">Send Text</button>
+    </div>
+
+
   </ion-content>
 </ion-view>
