--- a/client/templates/metronome.html
+++ b/client/templates/metronome.html
@@ -1,21 +1,46 @@
-<ion-view view-title="Metronome">
-  <ion-content>
+<ion-view view-title="{{met.metSettings.room.curValue}}">
+  <ion-header>
     <ion-nav-bar>
       <ion-nav-buttons side="left">
-        <button ng-click="met.showRoomSettings()" id="showRoomSettings" class="button button-clear button-positive button-icon ion-ios-cog"></button>
+        <button ng-click="met.showRoomSettings(met)" id="showRoomSettings" class="button button-clear button-positive button-icon ion-ios-cog"></button>
       </ion-nav-buttons>
     </ion-nav-bar>
-    <h1>Metronome!</h1>
-    <button ng-click="met.startClick()" class="button button-clear button-assertive">Start</button>
-    <button ng-click="met.stopClick()" class="button button-clear button-assertive">Stop</button>
-    <div class="inputContainer">
-      <label for="tempo">BPM:</label>
-      <input type="text" id="tempo" name="tempo" ng-model="met.metSettings.startingTempo">
-    </div>
+  </ion-header>
+  <ion-content>
+    <input type="hidden" name="hiddenRoom" value="">
+    <input type="hidden" name="userId" value="">
 
+    <div class="tempoContainer">
+      <input type="text" id="tempo" name="tempo" ng-model="met.metSettings.startingTempo">
+      <label for="tempo">BPM</label>
+    </div>
+    <!-- <input type="range"
+       ng-model="met.metSettings.subdivision"
+       [name="rangetest"]
+       [min="string"]
+       [max="string"]
+       [step="string"]
+       [ng-change="expression"]
+       [ng-checked="expression"]>  -->
+       <div id="rangeContainer">
+         <input type="range"
+             ng-model="met.metSettings.startingTempo"
+             name="rangetest"
+             min="40"
+             max="280"
+             step="1"
+             orient="vertical">
+       </div>
+
+
+    <!-- <h1>Metronome!</h1> -->
+  <div id="settingsContainer">
     <select name="subSelect" id="subSelect" placeholder="Subdivisions"
       ng-options="option.name for option in met.metSettings.subdivs track by option.value"
       ng-model="met.metSettings.subdivision"></select>
+
+
+
 
     <select name="tsSelect" id="tsSelect" placeholder="Time Signitures"
       ng-options="option.name for option in met.metSettings.timeSignitures track by option.value"
@@ -24,7 +49,13 @@
     <select name="accSelect" id="accSelect" placeholder="Accent"
       ng-options="option.name for option in met.metSettings.accentPlacements track by option.value"
       ng-model="met.metSettings.accent"></select>
+  </div>
 
+
+
+  <div class="btnContainer">
+    <button ng-click="met.toggleStartStop()" class="button start" id="toggleStartStop">Start</button>
+  </div>
 
   </ion-content>
 </ion-view>
